--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,37 @@
-python-dotenv
-Flask
-sqlite3
+blinker==1.9.0
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+cryptography==44.0.2
+Flask==3.1.0
+greenlet==3.2.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+MouseInfo==0.1.3
+numpy==2.2.4
+pandas==2.2.3
+pdfminer.six==20250327
+pdfplumber==0.11.6
+pexpect==4.9.0
+pillow==11.2.1
+ptyprocess==0.7.0
+PyAutoGUI==0.9.54
+pycparser==2.22
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+PyPDF2==3.0.1
+pypdfium2==4.30.1
+pyperclip==1.9.0
+PyRect==0.2.0
+PyScreeze==1.0.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+pytweening==1.2.0
+pytz==2025.2
+six==1.17.0
+SQLAlchemy==2.0.40
+typing_extensions==4.13.2
+tzdata==2025.2
+Werkzeug==3.1.3
