--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 blinker==1.9.0
+certifi==2025.4.26
 cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
@@ -6,6 +7,7 @@ colorama==0.4.6
 cryptography==44.0.2
 Flask==3.1.0
 greenlet==3.2.1
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
@@ -30,8 +32,10 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytweening==1.2.0
 pytz==2025.2
+requests==2.32.3
 six==1.17.0
 SQLAlchemy==2.0.40
 typing_extensions==4.13.2
 tzdata==2025.2
+urllib3==2.4.0
 Werkzeug==3.1.3
